package bridge;

public interface Brand {
    void open();
    void close();
    void call();

}
